Renomeia pacote para 'geopopr' (minúsculas)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: Geopopr
+Package: geopopr
 Title: Population geography spatial analysis and visualization 
 Version: 0.0.0.9000
 Authors@R: 
